--- a/about.html
+++ b/about.html
@@ -19,64 +19,69 @@
         </div>
       </div>
     </section>
-  
     <nav class="navbar">
       <div class="inner_navbar">
         <ul>
           <li><a href="index.html" class="menu-item">Home</a></li>
-          <li><a href="about.html" class="menu-item">About Us</a>
+          <li><a href="#" class="menu-item">About Us</a>
               <div class="dropdown-content">
-                <a href="#" class="dropdown-item">Our inspiration</a>
-                <a href="#" class="dropdown-item">History of the Seva Samithi</a>
-                <a href="#" class="dropdown-item">Our volunteers</a>
+                <a href="about.html" class="dropdown-item">Our inspiration</a>
+                <a href="about.html#history" class="dropdown-item">History of the Seva Samithi</a>
+                <a href="about.html#volunteers" class="dropdown-item">Our volunteers</a>
               </div>
             </li>
           <li><a href="infrastructure.html" class="menu-item">Campus</a></li>
           <li><a href="activities.html" class="menu-item">Activites</a>
             <div class="dropdown-content">
-              <a href="#" class="dropdown-item">Medical</a>
-              <a href="#" class="dropdown-item">Educational</a>
-              <a href="#" class="dropdown-item">Relief works</a>
-              <a href="#" class="dropdown-item">Rural Development</a>
+              <a href="activities.html#medical" class="dropdown-item">Medical</a>
+              <a href="activities.html#educational" class="dropdown-item">Educational</a>
+              <a href="activities.html#relief" class="dropdown-item">Relief works</a>
+              <a href="activities.html#rural" class="dropdown-item">Rural Development</a>
+              <a href="activities.html#cultural" class="dropdown-item">Cultural</a>
             </div>
           </li>
           <li><a href="#" class="menu-item">Media</a>
             <div class="dropdown-content">
-              <a href="#" class="dropdown-item">Photos</a>
-              <a href="#" class="dropdown-item">Videos</a>
+              <a href="activities-photos-link.html" class="dropdown-item">Photos</a>
+              <a href="https://www.youtube.com/channel/UCGTY3RcDT4eKHOB586YcXvw?view_as=subscriber" class="dropdown-item" target="_blank">Videos</a>
             </div>
           </li>
           <li><a href="donationappeal.html" class="menu-item">Donate</a></li>
           <li><a href="volunteer.html" class="menu-item">Get Involved</a></li>
-          <li><a href="sponsor.html" class="menu-item">Our Sponsors</a></li>
           <li><a href="contact.html" class="menu-item">Contact Us</a></li>
         </ul>
       </div>
     </nav>
+ 
     
     <section id="about" class="page-content">
       <div class="page-text">
-      <h2> Our Inspiration</h2>
-      <h3>Sri Ramakrishna</h3>
-        <div id="ramakrishna" class="about-content">
-          <img src="aboutuspictures/Sri_Ramakrishna.jpg" alt="ramakrishna">
-          <p></p>
-        </div>
-      <h3>Sri Sarada Devi</h3>
-        <div id="sarada" class="about-content">
-          <img src="aboutuspictures/Sri-Sarada-Devi.jpg" alt="Sri sarada devi">
-          <p></p>
-        </div>
-      <h3>Swami Vivekananda</h3>
-        <div id="Vivekananda" class="about-content">
-          <img src="aboutuspictures/Swami_Vivekananda_Jaipur1.jpg" alt="swami vivekananda">
-          <p></p>
-        </div>
-      <h3>Swami Ramakrishnanada</h3>
-        <div id="ramakrishnananda" class="about-content">
-          <img src="aboutuspictures/SasiMj141.jpg" alt="swami ramakrishnananda">
-          <p></p>
-        </div>
+        <section id="inspiration">
+          <h2> Our Inspiration</h2>
+          <h3>Sri Ramakrishna</h3>
+          <div id="ramakrishna" class="about-content">
+            <img src="aboutuspictures/Sri_Ramakrishna.jpg" alt="ramakrishna">
+            <p>Sri Ramakrishna was born on 18 February 1836 in the village of Kamarpukur about sixty miles northwest of Kolkata.From early days, he was disinclined towards formal education and worldly affairs.  He was fond of serving holy men and listening to their discourses. He was also very often found to be absorbed in spiritual moods.</p><p>Ramakrishna developed intense devotion to Mother Kali and spent hours in loving adoration of her image, forgetting the rituals of priestly duties. His intense longing culminated in the vision of Mother Kali as boundless effulgence engulfing everything around him.</p><p>Impelled by a strong inner urge to experience different aspects of God he followed, with the help of a series of Gurus, the various paths described in the Hindu scriptures, and realized God through each of them.</p><p>He instilled in his young disciples love for one another, and thus laid the foundation for the future monastic brotherhood known as Ramakrishna Math.</p>
+          </div>
+          <h3>Sri Sarada Devi</h3>
+          <div id="sarada" class="about-content">
+            <img src="aboutuspictures/Sri-Sarada-Devi.jpg" alt="Sri sarada devi">
+            <p>Endearingly known as ‘Holy Mother’, Sri Sarada Devi, the spiritual consort of Sri Ramakrishna, was born on 22 December 1853 in a poor Brahmin family in Jayrambati, a village adjoining Kamarpukur in West Bengal. When she was about six years old, she was married to Sri Ramakrishna, according to the custom prevalent in India in those days. However, after the event, she continued to live with her parents, while Sri Ramakrishna lived a God-intoxicated life at Dakshineshwar.At the age of eighteen she walked all the way to Dakshineshwar to meet her husband. Sarada Devi served Sri Ramakrishna as his devoted wife and disciple, while remaining a virgin nun and following the spiritual path.</p><p>After Sri Ramakrishna’s passing away in 1886, Sarada Devi spent some months in pilgrimage, and then went to Kamarpukur where she lived in great privation. Coming to know of this, the disciples of Sri Ramakrishna brought her to Kolkata. This marked a turning point in her life. She now began to accept spiritual seekers as her disciples, and became the open portal to immortality for hundreds of people.She was closely associated with the school for girls started by Sister Nivedita.</p>
+          </div>
+          <h3>Swami Vivekananda</h3>
+          <div id="Vivekananda" class="about-content">
+            <img src="aboutuspictures/Swami_Vivekananda_Jaipur1.jpg" alt="swami vivekananda">
+            <p>Swami Vivekananda, known in his pre-monastic life as Narendra Nath Datta, was born in an affluent family in Kolkata on 12 January 1863.</p><p>At the threshold of youth, Narendra had to pass through a period of spiritual crisis when doubts about the existence of God assailed him. It was at that time he first heard about Sri Ramakrishna and went to meet him.  Sri Ramakrishna won him over through his pure, unselfish love. Thus began a guru-disciple relationship which is unique in the history of spiritual masters. Narendra now became a frequent visitor to Dakshineshwar and, under the guidance of the Master, made rapid strides on the spiritual path.</p><p>After the Master’s passing, fifteen of his young disciples (one more joined them later) began to live together in a dilapidated building at Baranagar in North Kolkata. Under the leadership of Narendra, they formed a new monastic brotherhood, and in 1887 they took the formal vows of sannyasa, thereby assuming new names. Narendra now became Swami Vivekananda (although this name was assumed much later).</p><p></p>Swami Vivekananda accomplished another important task of his mission on earth. He founded on 1 May 1897 a unique type of organization known as Ramakrishna Mission, in which monks and lay people would jointly undertake propagation of Practical Vedanta, and various forms of social service, such as running hospitals, schools, colleges, hostels, rural development centres etc, and conducting massive relief and rehabilitation work for victims of earthquakes, cyclones and other calamities, in different parts of India and other countries.</p>
+          </div>
+        </section>
+
+        <section id="history">
+
+        </section>
+
+        <section id="volunteers">
+          
+        </section>
       </div>
     </section>
 
