--- a/activities-photos-link.html
+++ b/activities-photos-link.html
@@ -24,11 +24,11 @@
       <div class="inner_navbar">
         <ul>
           <li><a href="index.html" class="menu-item">Home</a></li>
-          <li><a href="about.html" class="menu-item">About Us</a>
+          <li><a href="#" class="menu-item">About Us</a>
               <div class="dropdown-content">
-                <a href="#" class="dropdown-item">Our inspiration</a>
-                <a href="#" class="dropdown-item">History of the Seva Samithi</a>
-                <a href="#" class="dropdown-item">Our volunteers</a>
+                <a href="about.html" class="dropdown-item">Our inspiration</a>
+                <a href="about.html#history" class="dropdown-item">History of the Seva Samithi</a>
+                <a href="about.html#volunteers" class="dropdown-item">Our volunteers</a>
               </div>
             </li>
           <li><a href="infrastructure.html" class="menu-item">Campus</a></li>
@@ -38,6 +38,7 @@
               <a href="activities.html#educational" class="dropdown-item">Educational</a>
               <a href="activities.html#relief" class="dropdown-item">Relief works</a>
               <a href="activities.html#rural" class="dropdown-item">Rural Development</a>
+              <a href="activities.html#cultural" class="dropdown-item">Cultural</a>
             </div>
           </li>
           <li><a href="#" class="menu-item">Media</a>
@@ -52,8 +53,9 @@
         </ul>
       </div>
     </nav>
-
 <section id="activites-photo-link" class="page-content">
+  <h3>Photos</h3>
+
    <p>Please find below photos of our various Medical Activities</p>
    <ul>
    <li><a href="https://photos.app.goo.gl/Wr1c9mLQ794Kjhoo8" target="_blank" >Blood donation camp, 2020.</a></li>
