--- a/infrastructure.html
+++ b/infrastructure.html
@@ -24,31 +24,31 @@
       <div class="inner_navbar">
         <ul>
           <li><a href="index.html" class="menu-item">Home</a></li>
-          <li><a href="about.html" class="menu-item">About Us</a>
+          <li><a href="#" class="menu-item">About Us</a>
               <div class="dropdown-content">
-                <a href="#" class="dropdown-item">Our inspiration</a>
-                <a href="#" class="dropdown-item">History of the Seva Samithi</a>
-                <a href="#" class="dropdown-item">Our volunteers</a>
+                <a href="about.html" class="dropdown-item">Our inspiration</a>
+                <a href="about.html#history" class="dropdown-item">History of the Seva Samithi</a>
+                <a href="about.html#volunteers" class="dropdown-item">Our volunteers</a>
               </div>
-          </li>
+            </li>
           <li><a href="infrastructure.html" class="menu-item">Campus</a></li>
           <li><a href="activities.html" class="menu-item">Activites</a>
             <div class="dropdown-content">
-              <a href="#" class="dropdown-item">Medical</a>
-              <a href="#" class="dropdown-item">Educational</a>
-              <a href="#" class="dropdown-item">Relief works</a>
-              <a href="#" class="dropdown-item">Rural Development</a>
+              <a href="activities.html#medical" class="dropdown-item">Medical</a>
+              <a href="activities.html#educational" class="dropdown-item">Educational</a>
+              <a href="activities.html#relief" class="dropdown-item">Relief works</a>
+              <a href="activities.html#rural" class="dropdown-item">Rural Development</a>
+              <a href="activities.html#cultural" class="dropdown-item">Cultural</a>
             </div>
           </li>
           <li><a href="#" class="menu-item">Media</a>
             <div class="dropdown-content">
-              <a href="#" class="dropdown-item">Photos</a>
-              <a href="#" class="dropdown-item">Videos</a>
+              <a href="activities-photos-link.html" class="dropdown-item">Photos</a>
+              <a href="https://www.youtube.com/channel/UCGTY3RcDT4eKHOB586YcXvw?view_as=subscriber" class="dropdown-item" target="_blank">Videos</a>
             </div>
           </li>
           <li><a href="donationappeal.html" class="menu-item">Donate</a></li>
           <li><a href="volunteer.html" class="menu-item">Get Involved</a></li>
-          <li><a href="sponsor.html" class="menu-item">Our Sponsors</a></li>
           <li><a href="contact.html" class="menu-item">Contact Us</a></li>
         </ul>
       </div>
@@ -100,7 +100,7 @@
         <i class="far fa-copyright"></i>
         <p>2020 Sri Ramakrishna Seva Samithi, Husurnagar</p>
       </div>
-      <p>Designed by<a href="#" target="_blank"> Ranjani Pinnelli</a></p>
+      <p>Designed by<a href="https://codepen.io/ranjani-pinnelli" target="_blank"> Ranjani Pinnelli</a></p>
     </section>
   </body>
 </html>
