--- a/volunteer.html
+++ b/volunteer.html
@@ -24,11 +24,11 @@
       <div class="inner_navbar">
         <ul>
           <li><a href="index.html" class="menu-item">Home</a></li>
-          <li><a href="about.html" class="menu-item">About Us</a>
+          <li><a href="#" class="menu-item">About Us</a>
               <div class="dropdown-content">
-                <a href="#" class="dropdown-item">Our inspiration</a>
-                <a href="#" class="dropdown-item">History of the Seva Samithi</a>
-                <a href="#" class="dropdown-item">Our volunteers</a>
+                <a href="about.html" class="dropdown-item">Our inspiration</a>
+                <a href="about.html#history" class="dropdown-item">History of the Seva Samithi</a>
+                <a href="about.html#volunteers" class="dropdown-item">Our volunteers</a>
               </div>
             </li>
           <li><a href="infrastructure.html" class="menu-item">Campus</a></li>
@@ -38,6 +38,7 @@
               <a href="activities.html#educational" class="dropdown-item">Educational</a>
               <a href="activities.html#relief" class="dropdown-item">Relief works</a>
               <a href="activities.html#rural" class="dropdown-item">Rural Development</a>
+              <a href="activities.html#cultural" class="dropdown-item">Cultural</a>
             </div>
           </li>
           <li><a href="#" class="menu-item">Media</a>
@@ -52,6 +53,7 @@
         </ul>
       </div>
     </nav>
+    
     <section id="volunteer" class="page-content">
       <h2> Volunteer </h2>
       <div class="page-text">
