--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="https://kit.fontawesome.com/f6ed09b881.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="style-test.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramakrishna Seva Samithi</title>
   </head>
@@ -30,40 +30,40 @@
       <input type="checkbox" id="toggle">
       <div class="menu">
         <ul>
-          <li><a href="C:\Users\ABDUL ALTHAF\Documents\ranjani\CSS PRACTICCE\index-new.html" class="menu-item">Home</a></li>
-          <li><a href="C:\Users\ABDUL ALTHAF\Documents\ranjani\CSS PRACTICCE\about.html" class="menu-item">About Us</a>
+          <li><a href="index.html" class="menu-item">Home</a></li>
+          <li><a href="about.html" class="menu-item">About Us</a>
             <div class="dropdown-content">
-              <a href="C:\Users\ABDUL ALTHAF\Documents\ranjani\CSS PRACTICCE\about.html" class="dropdown-item">Our inspiration</a>
-              <a href="C:\Users\ABDUL ALTHAF\Documents\ranjani\CSS PRACTICCE\about.html#history" class="dropdown-item">History of the Seva Samithi</a>
-              <a href="C:\Users\ABDUL ALTHAF\Documents\ranjani\CSS PRACTICCE\about.html#volunteers" class="dropdown-item">Our volunteers</a>
+              <a href="about.html" class="dropdown-item">Our inspiration</a>
+              <a href="about.html#history" class="dropdown-item">History of the Seva Samithi</a>
+              <a href="about.html#volunteers" class="dropdown-item">Our volunteers</a>
             </div>
           </li>
-          <li><a href="C:\Users\ABDUL ALTHAF\Documents\ranjani\CSS PRACTICCE\infrastructure.html" class="menu-item">Campus</a></li>
-          <li><a href="C:\Users\ABDUL ALTHAF\Documents\ranjani\CSS PRACTICCE\activities.html" class="menu-item">Activites</a>
+          <li><a href="infrastructure.html" class="menu-item">Campus</a></li>
+          <li><a href="activities.html" class="menu-item">Activites</a>
             <div class="dropdown-content">
-              <a href="C:\Users\ABDUL ALTHAF\Documents\ranjani\CSS PRACTICCE\activities.html#medical" class="dropdown-item">Medical</a>
-              <a href="C:\Users\ABDUL ALTHAF\Documents\ranjani\CSS PRACTICCE\activities.html#educational" class="dropdown-item">Educational</a>
-              <a href="C:\Users\ABDUL ALTHAF\Documents\ranjani\CSS PRACTICCE\activities.html#relief" class="dropdown-item">Relief works</a>
-              <a href="C:\Users\ABDUL ALTHAF\Documents\ranjani\CSS PRACTICCE\activities.html#rural" class="dropdown-item">Rural Development</a>
-              <a href="C:\Users\ABDUL ALTHAF\Documents\ranjani\CSS PRACTICCE\activities.html#cultural" class="dropdown-item">Cultural</a>
+              <a href="activities.html#medical" class="dropdown-item">Medical</a>
+              <a href="activities.html#educational" class="dropdown-item">Educational</a>
+              <a href="activities.html#relief" class="dropdown-item">Relief works</a>
+              <a href="activities.html#rural" class="dropdown-item">Rural Development</a>
+              <a href="activities.html#cultural" class="dropdown-item">Cultural</a>
             </div>
           </li>
-          <li><a href="C:\Users\ABDUL ALTHAF\Documents\ranjani\CSS PRACTICCE\activities-photos-link.html" class="menu-item">Media</a>
+          <li><a href="activities-photos-link.html" class="menu-item">Media</a>
             <div class="dropdown-content">
-              <a href="C:\Users\ABDUL ALTHAF\Documents\ranjani\CSS PRACTICCE\activities-photos-link.html" class="dropdown-item">Photos</a>
+              <a href="activities-photos-link.html" class="dropdown-item">Photos</a>
               <a href="https://www.youtube.com/channel/UCGTY3RcDT4eKHOB586YcXvw?view_as=subscriber" class="dropdown-item" target="_blank">Videos</a>
             </div>
           </li>
-          <li><a href="C:\Users\ABDUL ALTHAF\Documents\ranjani\CSS PRACTICCE\donationappeal.html" class="menu-item">Donate</a></li>
-          <li><a href="C:\Users\ABDUL ALTHAF\Documents\ranjani\CSS PRACTICCE\volunteer.html" class="menu-item">Get Involved</a></li>
-          <li><a href="C:\Users\ABDUL ALTHAF\Documents\ranjani\CSS PRACTICCE\contact.html" class="menu-item">Contact Us</a></li>
+          <li><a href="donationappeal.html" class="menu-item">Donate</a></li>
+          <li><a href="volunteer.html" class="menu-item">Get Involved</a></li>
+          <li><a href="contact.html" class="menu-item">Contact Us</a></li>
         </ul>
       </div>
   </nav>
 
   <div class="container">
     <section class="home-image">
-      <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\rksevasamithi_webpage\images on home page\home page image.jpg" alt="samithi-picture" class="home-page-image">
+      <img src="images\home page image.jpg" alt="samithi-picture" class="home-page-image">
     </section>
 
     <section id="featured" class="flex-box chocolate-bg">
@@ -71,14 +71,14 @@
       <div class="picture-block">
       <div class="picture-block-item">
         <a href="donationappeal.html" class="picture-block-item-link">
-          <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\rksevasamithi_webpage\images on home page\computer center.jpg" alt="computer center establishment" class="picture-block-item-img">
+          <img src="images\computer center.jpg" alt="computer center establishment" class="picture-block-item-img">
           <p class="picture-block-item-text">You can make a difference, donate and help us build a computer center.</p>
         </a>
       </div>
 
       <div class="picture-block-item">
         <a href="donationappeal.html" class="picture-block-item-link">
-          <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\rksevasamithi_webpage\images on home page\personality development classes.jpg" alt="personality development classes" class="picture-block-item-img">
+          <img src="images\personality development classes.jpg" alt="personality development classes" class="picture-block-item-img">
           <p class="picture-block-item-text">Help us run these personality development classes</p>
         </a>
       </div>
@@ -90,21 +90,21 @@
       <div class="picture-block">
       <div class="picture-block-item updates-container">
         <a href="activities.html" class="picture-block-item-link">
-          <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\rksevasamithi_webpage\images on home page\blood donation may 2020.jpg" alt="blood donation camp 2020" class="picture-block-item-img">
+          <img src="images\blood donation may 2020.jpg" alt="blood donation camp 2020" class="picture-block-item-img">
           <p class="picture-block-item-text">Blood donation camp, May 2020.</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#relief" class="picture-block-item-link">
-          <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\rksevasamithi_webpage\images on home page\corona victims.jpg" alt="corona relief activites" class="picture-block-item-img">
+          <img src="images\corona victims.jpg" alt="corona relief activites" class="picture-block-item-img">
           <p class="picture-block-item-text">Relief measures for poor during the corona lockdown</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#relief" class="picture-block-item-link">
-          <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\rksevasamithi_webpage\images on home page\new-building.jpg" alt="new building construction" class="picture-block-item-img">
+          <img src="images\new-building.jpg" alt="new building construction" class="picture-block-item-img">
           <p class="picture-block-item-text">Construction of the Vivekananda Institute of Human Excellence in full swing</p>
         </a>
       </div>
@@ -117,98 +117,98 @@
       <div class="picture-block">
       <div class="picture-block-item updates-container">
         <a href="activities.html#medical" class="tile" >
-          <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\rksevasamithi_webpage\images on home page\blood donation camp.jpg" alt="activity1" class="activity-image">
+          <img src="images\blood donation camp.jpg" alt="activity1" class="activity-image">
           <p class="picture-block-item-text">Blood donation camps</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#medical" target="_blank" class="tile" >
-          <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\rksevasamithi_webpage\images on home page\ent and general medical camp.jpg" alt="activity2" class="activity-image">
+          <img src="images\ent and general medical camp.jpg" alt="activity2" class="activity-image">
           <p class="picture-block-item-text">ENT and General Medical Camps</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#medical" target="_blank" class="tile" >
-          <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\rksevasamithi_webpage\images on home page\eye camp.jpg" alt="activity3" class="activity-image">
+          <img src="images\eye camp.jpg" alt="activity3" class="activity-image">
           <p class="picture-block-item-text">Eye Camps</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#educational" target="_blank" class="tile" >
-          <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\rksevasamithi_webpage\images on home page\teachers convention.jpg" alt="activity4" class="activity-image">
+          <img src="images\teachers convention.jpg" alt="activity4" class="activity-image">
           <p class="picture-block-item-text">Teachers Convention</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#educational" target="_blank" class="tile" >
-          <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\rksevasamithi_webpage\images on home page\youth program.jpg" alt="activity5" class="activity-image">
+          <img src="images\youth program.jpg" alt="activity5" class="activity-image">
           <p class="picture-block-item-text">Youth program</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#educational" target="_blank" class="tile" >
-          <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\rksevasamithi_webpage\images on home page\notebooks distribution.jpg" alt="activity6" class="activity-image">
+          <img src="images\notebooks distribution.jpg" alt="activity6" class="activity-image">
           <p class="picture-block-item-text">Notebooks distribution</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#relief" target="_blank" class="tile" >
-          <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\rksevasamithi_webpage\images on home page\godavari flood relief.jpg" alt="activity7" class="activity-image">
+          <img src="images\godavari flood relief.jpg" alt="activity7" class="activity-image">
           <p class="picture-block-item-text">Godavari flood relief</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#relief" target="_blank" class="tile" >
-          <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\rksevasamithi_webpage\images on home page\krishna relief activitiy.jpg" alt="activity8" class="activity-image">
+          <img src="images\krishna relief activitiy.jpg" alt="activity8" class="activity-image">
           <p class="picture-block-item-text">Krishna flood relief</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="infrastructure.html" target="_blank" class="tile" >
-          <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\rksevasamithi_webpage\images on home page\library.jpg" alt="activity9" class="activity-image">
+          <img src="images\library.jpg" alt="activity9" class="activity-image">
           <p class="picture-block-item-text">Establishing a library</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#rural" target="_blank" class="tile" >
-          <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\rksevasamithi_webpage\images on home page\tree planting.jpg" alt="activity10" class="activity-image">
+          <img src="images\tree planting.jpg" alt="activity10" class="activity-image">
           <p class="picture-block-item-text">Planting of trees</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#rural" target="_blank" class="tile" >
-          <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\rksevasamithi_webpage\images on home page\Water camp.jpg" alt="activity11" class="activity-image">
+          <img src="images\Water camp.jpg" alt="activity11" class="activity-image">
           <p class="picture-block-item-text">Water camps</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#cultural" target="_blank" class="tile" >
-          <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\rksevasamithi_webpage\images on home page\cultural activities.jpg" alt="activity12" class="activity-image">
+          <img src="images\cultural activities.jpg" alt="activity12" class="activity-image">
           <p class="picture-block-item-text">Cultural activities</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#cultural" target="_blank" class="tile" >
-          <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\rksevasamithi_webpage\images on home page\christmas celebrations.jpg" alt="activity13" class="activity-image">
+          <img src="images\christmas celebrations.jpg" alt="activity13" class="activity-image">
           <p class="picture-block-item-text">Christmas celebrations</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#cultural" target="_blank" class="tile" >
-          <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\rksevasamithi_webpage\images on home page\iftaar celebrations.jpg" alt="activity14" class="activity-image">
+          <img src="images\iftaar celebrations.jpg" alt="activity14" class="activity-image">
           <p class="picture-block-item-text">Iftaar celebrations</p>
         </a>
       </div>
@@ -240,11 +240,11 @@
 
       <div class="picture-block">
         <div class="picture-block-item">
-          <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\rksevasamithi_webpage\images on home page\quote 1.jpg" alt="quote 1">
+          <img src="images\quote 1.jpg" alt="quote 1">
         </div>
 
         <div class="picture-block-item"> 
-          <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\rksevasamithi_webpage\images on home page\quote2.jpg" alt="quote 2"> 
+          <img src="images\quote2.jpg" alt="quote 2"> 
         </div>
       </div>
 
@@ -260,10 +260,10 @@
         <p class="picture-block-item-text"> Sri Rama Krishna Seva Samithi,<br> Huzur Nagar,<br>Telangana 508204,<br>India<br>Ph:9447080907</p>
         <div class="picture-block icon-container">
           <a href="https://www.facebook.com/rksshnr" target="_blank">
-            <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\CSS PRACTICCE\facebook\f_logo_RGB-Blue_58.png" class="icon">
+            <img src="images\f_logo_RGB-Blue_58.png" class="icon">
           </a>
           <a href = "https://www.youtube.com/channel/UCGTY3RcDT4eKHOB586YcXvw?view_as=subscriber"  target="_blank">
-            <img src="C:\Users\ABDUL ALTHAF\Documents\ranjani\CSS PRACTICCE\youtube_full_color_icon\yt_icon_rgb.png" class="icon">
+            <img src="images\yt_icon_rgb.png" class="icon">
           </a>
         </div>
       </div>
