--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   <div class="container">
     <section class="home-image">
-      <img src="images\home page image.jpg" alt="samithi-picture" class="home-page-image">
+      <img src="home page image.jpg" alt="samithi-picture" class="home-page-image">
     </section>
 
     <section id="featured" class="flex-box chocolate-bg">
