--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
       <div class="picture-block">
       <div class="picture-block-item">
         <a href="donationappeal.html" class="picture-block-item-link">
-          <img src="images\computer center.jpg" alt="computer center establishment" class="picture-block-item-img">
+          <img src="computer center.jpg" alt="computer center establishment" class="picture-block-item-img">
           <p class="picture-block-item-text">You can make a difference, donate and help us build a computer center.</p>
         </a>
       </div>
 
       <div class="picture-block-item">
         <a href="donationappeal.html" class="picture-block-item-link">
-          <img src="images\personality development classes.jpg" alt="personality development classes" class="picture-block-item-img">
+          <img src="personality development classes.jpg" alt="personality development classes" class="picture-block-item-img">
           <p class="picture-block-item-text">Help us run these personality development classes</p>
         </a>
       </div>
@@ -90,7 +90,7 @@
       <div class="picture-block">
       <div class="picture-block-item updates-container">
         <a href="activities.html" class="picture-block-item-link">
-          <img src="images\blood donation may 2020.jpg" alt="blood donation camp 2020" class="picture-block-item-img">
+          <img src="blood donation may 2020.jpg" alt="blood donation camp 2020" class="picture-block-item-img">
           <p class="picture-block-item-text">Blood donation camp, May 2020.</p>
         </a>
       </div>
@@ -104,7 +104,7 @@
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#relief" class="picture-block-item-link">
-          <img src="images\new-building.jpg" alt="new building construction" class="picture-block-item-img">
+          <img src="New Building.jpg" alt="new building construction" class="picture-block-item-img">
           <p class="picture-block-item-text">Construction of the Vivekananda Institute of Human Excellence in full swing</p>
         </a>
       </div>
@@ -124,91 +124,91 @@
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#medical" target="_blank" class="tile" >
-          <img src="images\ent and general medical camp.jpg" alt="activity2" class="activity-image">
+          <img src="ent and general medical camp.jpg" alt="activity2" class="activity-image">
           <p class="picture-block-item-text">ENT and General Medical Camps</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#medical" target="_blank" class="tile" >
-          <img src="images\eye camp.jpg" alt="activity3" class="activity-image">
+          <img src="eye camp.jpg" alt="activity3" class="activity-image">
           <p class="picture-block-item-text">Eye Camps</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#educational" target="_blank" class="tile" >
-          <img src="images\teachers convention.jpg" alt="activity4" class="activity-image">
+          <img src="teachers convention.jpg" alt="activity4" class="activity-image">
           <p class="picture-block-item-text">Teachers Convention</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#educational" target="_blank" class="tile" >
-          <img src="images\youth program.jpg" alt="activity5" class="activity-image">
+          <img src="youth program.jpg" alt="activity5" class="activity-image">
           <p class="picture-block-item-text">Youth program</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#educational" target="_blank" class="tile" >
-          <img src="images\notebooks distribution.jpg" alt="activity6" class="activity-image">
+          <img src="notebooks distribution.jpg" alt="activity6" class="activity-image">
           <p class="picture-block-item-text">Notebooks distribution</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#relief" target="_blank" class="tile" >
-          <img src="images\godavari flood relief.jpg" alt="activity7" class="activity-image">
+          <img src="godavari flood relief.jpg" alt="activity7" class="activity-image">
           <p class="picture-block-item-text">Godavari flood relief</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#relief" target="_blank" class="tile" >
-          <img src="images\krishna relief activitiy.jpg" alt="activity8" class="activity-image">
+          <img src="krishna relief activitiy.jpg" alt="activity8" class="activity-image">
           <p class="picture-block-item-text">Krishna flood relief</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="infrastructure.html" target="_blank" class="tile" >
-          <img src="images\library.jpg" alt="activity9" class="activity-image">
+          <img src="library.jpg" alt="activity9" class="activity-image">
           <p class="picture-block-item-text">Establishing a library</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#rural" target="_blank" class="tile" >
-          <img src="images\tree planting.jpg" alt="activity10" class="activity-image">
+          <img src="tree planting.jpg" alt="activity10" class="activity-image">
           <p class="picture-block-item-text">Planting of trees</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#rural" target="_blank" class="tile" >
-          <img src="images\Water camp.jpg" alt="activity11" class="activity-image">
+          <img src="Water camp.jpg" alt="activity11" class="activity-image">
           <p class="picture-block-item-text">Water camps</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#cultural" target="_blank" class="tile" >
-          <img src="images\cultural activities.jpg" alt="activity12" class="activity-image">
+          <img src="cultural activities.jpg" alt="activity12" class="activity-image">
           <p class="picture-block-item-text">Cultural activities</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#cultural" target="_blank" class="tile" >
-          <img src="images\christmas celebrations.jpg" alt="activity13" class="activity-image">
+          <img src="christmas celebrations.jpg" alt="activity13" class="activity-image">
           <p class="picture-block-item-text">Christmas celebrations</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#cultural" target="_blank" class="tile" >
-          <img src="images\iftaar celebrations.jpg" alt="activity14" class="activity-image">
+          <img src="iftaar celebrations.jpg" alt="activity14" class="activity-image">
           <p class="picture-block-item-text">Iftaar celebrations</p>
         </a>
       </div>
@@ -240,11 +240,11 @@
 
       <div class="picture-block">
         <div class="picture-block-item">
-          <img src="images\quote 1.jpg" alt="quote 1">
+          <img src="quote 1.jpg" alt="quote 1">
         </div>
 
         <div class="picture-block-item"> 
-          <img src="images\quote2.jpg" alt="quote 2"> 
+          <img src="quote2.jpg" alt="quote 2"> 
         </div>
       </div>
 
@@ -260,10 +260,10 @@
         <p class="picture-block-item-text"> Sri Rama Krishna Seva Samithi,<br> Huzur Nagar,<br>Telangana 508204,<br>India<br>Ph:9447080907</p>
         <div class="picture-block icon-container">
           <a href="https://www.facebook.com/rksshnr" target="_blank">
-            <img src="images\f_logo_RGB-Blue_58.png" class="icon">
+            <img src="f_logo_RGB-Blue_58.png" class="icon">
           </a>
           <a href = "https://www.youtube.com/channel/UCGTY3RcDT4eKHOB586YcXvw?view_as=subscriber"  target="_blank">
-            <img src="images\yt_icon_rgb.png" class="icon">
+            <img src="yt_icon_rgb.png" class="icon">
           </a>
         </div>
       </div>
