--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
       <div class="picture-block-item updates-container">
         <a href="activities.html#relief" class="picture-block-item-link">
-          <img src="images\corona victims.jpg" alt="corona relief activites" class="picture-block-item-img">
+          <img src="corona victims.jpg" alt="corona relief activites" class="picture-block-item-img">
           <p class="picture-block-item-text">Relief measures for poor during the corona lockdown</p>
         </a>
       </div>
@@ -117,7 +117,7 @@
       <div class="picture-block">
       <div class="picture-block-item updates-container">
         <a href="activities.html#medical" class="tile" >
-          <img src="images\blood donation camp.jpg" alt="activity1" class="activity-image">
+          <img src="blood donation camp.jpg" alt="activity1" class="activity-image">
           <p class="picture-block-item-text">Blood donation camps</p>
         </a>
       </div>
