--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section  class="header">
       <div class="inner_header">
         <div class="logo_container">
-          <a href="./index.html">
+          <a href=".\index.html">
             <img src="http://rksevasamithihnr.org/img/logo-web.png" alt="logo">
           </a>
         </div>
@@ -30,55 +30,55 @@
       <input type="checkbox" id="toggle">
       <div class="menu">
         <ul>
-          <li><a href="./index.html" class="menu-item">Home</a></li>
-          <li><a href="./about.html" class="menu-item">About Us</a>
+          <li><a href=".\index.html" class="menu-item">Home</a></li>
+          <li><a href=".\about.html" class="menu-item">About Us</a>
             <div class="dropdown-content">
-              <a href="./about.html" class="dropdown-item">Our inspiration</a>
-              <a href="./about.html#history" class="dropdown-item">History of the Seva Samithi</a>
-              <a href="./about.html#volunteers" class="dropdown-item">Our volunteers</a>
+              <a href=".\about.html" class="dropdown-item">Our inspiration</a>
+              <a href=".\about.html#history" class="dropdown-item">History of the Seva Samithi</a>
+              <a href=".\about.html#volunteers" class="dropdown-item">Our volunteers</a>
             </div>
           </li>
-          <li><a href="./infrastructure.html" class="menu-item">Campus</a></li>
-          <li><a href="./activities.html" class="menu-item">Activites</a>
+          <li><a href=".\infrastructure.html" class="menu-item">Campus</a></li>
+          <li><a href=".\activities.html" class="menu-item">Activites</a>
             <div class="dropdown-content">
-              <a href="./activities.html#medical" class="dropdown-item">Medical</a>
-              <a href="./activities.html#educational" class="dropdown-item">Educational</a>
-              <a href="./activities.html#relief" class="dropdown-item">Relief works</a>
-              <a href="./activities.html#rural" class="dropdown-item">Rural Development</a>
-              <a href="./activities.html#cultural" class="dropdown-item">Cultural</a>
+              <a href=".\activities.html#medical" class="dropdown-item">Medical</a>
+              <a href=".\activities.html#educational" class="dropdown-item">Educational</a>
+              <a href=".\activities.html#relief" class="dropdown-item">Relief works</a>
+              <a href=".\activities.html#rural" class="dropdown-item">Rural Development</a>
+              <a href=".\activities.html#cultural" class="dropdown-item">Cultural</a>
             </div>
           </li>
-          <li><a href="./activities-photos-link.html" class="menu-item">Media</a>
+          <li><a href=".\activities-photos-link.html" class="menu-item">Media</a>
             <div class="dropdown-content">
-              <a href="./activities-photos-link.html" class="dropdown-item">Photos</a>
+              <a href=".\activities-photos-link.html" class="dropdown-item">Photos</a>
               <a href="https://www.youtube.com/channel/UCGTY3RcDT4eKHOB586YcXvw?view_as=subscriber" class="dropdown-item" target="_blank">Videos</a>
             </div>
           </li>
-          <li><a href="./donationappeal.html" class="menu-item">Donate</a></li>
-          <li><a href="./volunteer.html" class="menu-item">Get Involved</a></li>
-          <li><a href="./contact.html" class="menu-item">Contact Us</a></li>
+          <li><a href=".\donationappeal.html" class="menu-item">Donate</a></li>
+          <li><a href=".\volunteer.html" class="menu-item">Get Involved</a></li>
+          <li><a href=".\contact.html" class="menu-item">Contact Us</a></li>
         </ul>
       </div>
   </nav>
 
   <div class="container">
     <section class="home-image">
-      <img src="./home page image.jpg" alt="samithi-picture" class="home-page-image">
+      <img src=".\home page image.jpg" alt="samithi-picture" class="home-page-image">
     </section>
 
     <section id="featured" class="flex-box chocolate-bg">
       <h2 class="section-title">Featured Announcements</h2>
       <div class="picture-block">
       <div class="picture-block-item">
-        <a href="./donationappeal.html" class="picture-block-item-link">
-          <img src="./computer center.jpg" alt="computer center establishment" class="picture-block-item-img">
+        <a href=".\donationappeal.html" class="picture-block-item-link">
+          <img src=".\computer center.jpg" alt="computer center establishment" class="picture-block-item-img">
           <p class="picture-block-item-text">You can make a difference, donate and help us build a computer center.</p>
         </a>
       </div>
 
       <div class="picture-block-item">
-        <a href="./donationappeal.html" class="picture-block-item-link">
-          <img src="./personality development classes.jpg" alt="personality development classes" class="picture-block-item-img">
+        <a href=".\donationappeal.html" class="picture-block-item-link">
+          <img src=".\personality development classes.jpg" alt="personality development classes" class="picture-block-item-img">
           <p class="picture-block-item-text">Help us run these personality development classes</p>
         </a>
       </div>
@@ -89,22 +89,22 @@
       <h2 class="section-title">Recent Updates</h2>
       <div class="picture-block">
       <div class="picture-block-item updates-container">
-        <a href="./activities.html" class="picture-block-item-link">
-          <img src="./blood donation may 2020.jpg" alt="blood donation camp 2020" class="picture-block-item-img">
+        <a href=".\activities.html" class="picture-block-item-link">
+          <img src=".\blood donation may 2020.jpg" alt="blood donation camp 2020" class="picture-block-item-img">
           <p class="picture-block-item-text">Blood donation camp, May 2020.</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
-        <a href="./activities.html#relief" class="picture-block-item-link">
-          <img src="./corona victims.jpg" alt="corona relief activites" class="picture-block-item-img">
+        <a href=".\activities.html#relief" class="picture-block-item-link">
+          <img src=".\corona victims.jpg" alt="corona relief activites" class="picture-block-item-img">
           <p class="picture-block-item-text">Relief measures for poor during the corona lockdown</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
-        <a href="./activities.html#relief" class="picture-block-item-link">
-          <img src="./New Building.jpg" alt="new building construction" class="picture-block-item-img">
+        <a href=".\activities.html#relief" class="picture-block-item-link">
+          <img src=".\New Building.jpg" alt="new building construction" class="picture-block-item-img">
           <p class="picture-block-item-text">Construction of the Vivekananda Institute of Human Excellence in full swing</p>
         </a>
       </div>
@@ -116,99 +116,99 @@
       <h2 class="section-title">Activites</h2>
       <div class="picture-block">
       <div class="picture-block-item updates-container">
-        <a href="./activities.html#medical" class="tile" >
-          <img src="./blood donation camp.jpg" alt="activity1" class="activity-image">
+        <a href=".\activities.html#medical" class="tile" >
+          <img src=".\blood donation camp.jpg" alt="activity1" class="activity-image">
           <p class="picture-block-item-text">Blood donation camps</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
-        <a href="./activities.html#medical" target="_blank" class="tile" >
-          <img src="./ent and general medical camp.jpg" alt="activity2" class="activity-image">
+        <a href=".\activities.html#medical" target="_blank" class="tile" >
+          <img src=".\ent and general medical camp.jpg" alt="activity2" class="activity-image">
           <p class="picture-block-item-text">ENT and General Medical Camps</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
-        <a href="./activities.html#medical" target="_blank" class="tile" >
-          <img src="./eye camp.jpg" alt="activity3" class="activity-image">
+        <a href=".\activities.html#medical" target="_blank" class="tile" >
+          <img src=".\eye camp.jpg" alt="activity3" class="activity-image">
           <p class="picture-block-item-text">Eye Camps</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
-        <a href="./activities.html#educational" target="_blank" class="tile" >
-          <img src="./teachers convention.jpg" alt="activity4" class="activity-image">
+        <a href=".\activities.html#educational" target="_blank" class="tile" >
+          <img src=".\teachers convention.jpg" alt="activity4" class="activity-image">
           <p class="picture-block-item-text">Teachers Convention</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
-        <a href="./activities.html#educational" target="_blank" class="tile" >
-          <img src="./youth program.jpg" alt="activity5" class="activity-image">
+        <a href=".\activities.html#educational" target="_blank" class="tile" >
+          <img src=".\youth program.jpg" alt="activity5" class="activity-image">
           <p class="picture-block-item-text">Youth program</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
-        <a href="./activities.html#educational" target="_blank" class="tile" >
-          <img src="./notebooks distribution.jpg" alt="activity6" class="activity-image">
+        <a href=".\activities.html#educational" target="_blank" class="tile" >
+          <img src=".\notebooks distribution.jpg" alt="activity6" class="activity-image">
           <p class="picture-block-item-text">Notebooks distribution</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
-        <a href="./activities.html#relief" target="_blank" class="tile" >
-          <img src="./godavari flood relief.jpg" alt="activity7" class="activity-image">
+        <a href=".\activities.html#relief" target="_blank" class="tile" >
+          <img src=".\godavari flood relief.jpg" alt="activity7" class="activity-image">
           <p class="picture-block-item-text">Godavari flood relief</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
-        <a href="./activities.html#relief" target="_blank" class="tile" >
-          <img src="./krishna relief activitiy.jpg" alt="activity8" class="activity-image">
+        <a href=".\activities.html#relief" target="_blank" class="tile" >
+          <img src=".\krishna relief activitiy.jpg" alt="activity8" class="activity-image">
           <p class="picture-block-item-text">Krishna flood relief</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
-        <a href="./infrastructure.html" target="_blank" class="tile" >
-          <img src="./library.jpg" alt="activity9" class="activity-image">
+        <a href=".\infrastructure.html" target="_blank" class="tile" >
+          <img src=".\library.jpg" alt="activity9" class="activity-image">
           <p class="picture-block-item-text">Establishing a library</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
-        <a href="./activities.html#rural" target="_blank" class="tile" >
-          <img src="./tree planting.jpg" alt="activity10" class="activity-image">
+        <a href=".\activities.html#rural" target="_blank" class="tile" >
+          <img src=".\tree planting.jpg" alt="activity10" class="activity-image">
           <p class="picture-block-item-text">Planting of trees</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
-        <a href="./activities.html#rural" target="_blank" class="tile" >
-          <img src="./Water camp.jpg" alt="activity11" class="activity-image">
+        <a href=".\activities.html#rural" target="_blank" class="tile" >
+          <img src=".\Water camp.jpg" alt="activity11" class="activity-image">
           <p class="picture-block-item-text">Water camps</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
-        <a href="./activities.html#cultural" target="_blank" class="tile" >
-          <img src="./cultural activities.jpg" alt="activity12" class="activity-image">
+        <a href=".\activities.html#cultural" target="_blank" class="tile" >
+          <img src=".\cultural activities.jpg" alt="activity12" class="activity-image">
           <p class="picture-block-item-text">Cultural activities</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
-        <a href="./activities.html#cultural" target="_blank" class="tile" >
-          <img src="./christmas celebrations.jpg" alt="activity13" class="activity-image">
+        <a href=".\activities.html#cultural" target="_blank" class="tile" >
+          <img src=".\christmas celebrations.jpg" alt="activity13" class="activity-image">
           <p class="picture-block-item-text">Christmas celebrations</p>
         </a>
       </div>
 
       <div class="picture-block-item updates-container">
-        <a href="./activities.html#cultural" target="_blank" class="tile" >
-          <img src="./iftaar celebrations.jpg" alt="activity14" class="activity-image">
+        <a href=".\activities.html#cultural" target="_blank" class="tile" >
+          <img src=".\iftaar celebrations.jpg" alt="activity14" class="activity-image">
           <p class="picture-block-item-text">Iftaar celebrations</p>
         </a>
       </div>
@@ -219,7 +219,7 @@
     <h2 class="section-title">Media Gallery</h2>
     <div class="picture-block">
     <div class="picture-block-item gallery-tile">
-      <a href="./activities-photos-link.html" target="_blank" class="picture-block-item-link" >
+      <a href=".\activities-photos-link.html" target="_blank" class="picture-block-item-link" >
         <i class="far fa-8x fa-image gallery-icon"></i>
         <p class="picture-block-item-text">Photos</p>
       </a>
@@ -240,11 +240,11 @@
 
       <div class="picture-block">
         <div class="picture-block-item">
-          <img src="./quote 1.jpg" alt="quote 1">
+          <img src=".\quote 1.jpg" alt="quote 1">
         </div>
 
         <div class="picture-block-item"> 
-          <img src="./quote2.jpg" alt="quote 2"> 
+          <img src=".\quote2.jpg" alt="quote 2"> 
         </div>
       </div>
 
@@ -260,10 +260,10 @@
         <p class="picture-block-item-text"> Sri Rama Krishna Seva Samithi,<br> Huzur Nagar,<br>Telangana 508204,<br>India<br>Ph:9447080907</p>
         <div class="picture-block icon-container">
           <a href="https://www.facebook.com/rksshnr" target="_blank">
-            <img src="./f_logo_RGB-Blue_58.png" class="icon">
+            <img src=".\f_logo_RGB-Blue_58.png" class="icon">
           </a>
           <a href = "https://www.youtube.com/channel/UCGTY3RcDT4eKHOB586YcXvw?view_as=subscriber"  target="_blank">
-            <img src="./yt_icon_rgb.png" class="icon">
+            <img src=".\yt_icon_rgb.png" class="icon">
           </a>
         </div>
       </div>
