--- a/activities.html
+++ b/activities.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="https://kit.fontawesome.com/f6ed09b881.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href=".\style-test.css">
+    <link rel="stylesheet" type="text/css" href=".\style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramakrishna Seva Samithi</title>
   </head>
